--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,6 +54,14 @@ services:
   web:
     <<: *web-defaults
     hostname: web
+    labels:
+      - traefik.backend=thespaghettidetective
+      - traefik.frontend.rule=Host:spaghetti.your.domain
+      - traefik.docker.network=web
+      - traefik.port=3334
+    networks:
+      - web
+      - proxynet
     ports:
       - "3334:3334"
       - "${OCTOPRINT_TUNNEL_PORT_RANGE-15853-15873}:3334"
@@ -69,3 +77,10 @@ services:
   redis:
     restart: unless-stopped
     image: redis:5.0-alpine
+
+networks:
+  web:
+    external: true
+  proxynet:
+    name: proxy_net
+    external: true
