--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,8 +18,8 @@ x-web-defaults: &web-defaults
     EMAIL_USE_TLS: '${EMAIL_USE_TLS-True}'
     DEFAULT_FROM_EMAIL: '${DEFAULT_FROM_EMAIL-changeme@example.com}'
     DEBUG: '${DEBUG-False}'    # Don't set DEBUG to True unless you know what you are doing. Otherwise the static files will be cached in browser until hard-refresh
-    SITE_USES_HTTPS: '${SITE_USES_HTTPS-False}'
-    SITE_IS_PUBLIC: '${SITE_IS_PUBLIC-False}'
+    SITE_USES_HTTPS: 'True'
+    SITE_IS_PUBLIC: 'True'
     SOCIAL_LOGIN: '${SOCIAL_LOGIN-False}'
     REDIS_URL: '${REDIS_URL-redis://redis:6379}'
     DATABASE_URL: '${DATABASE_URL-sqlite:////app/db.sqlite3}'
