update with correct image naming

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,4 @@
-FROM thespaghettidetective/web:base-1.8
+FROM glregistry.wizzlehq.org/docker/obico-server:backend-base-latest
 
 WORKDIR /app
 EXPOSE 3334
