--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,8 +12,8 @@ build_api_base:
   script:
     - cd ml_api
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - docker build -t $CI_REGISTRY/obico/obico-api-base:latest -f Dockerfile.base_x86_64 .
-    - docker push $CI_REGISTRY/obico/obico-api-base:latest
+    - docker build -t $CI_REGISTRY/docker/obico-server:api-base-latest -f Dockerfile.base_x86_64 .
+    - docker push $CI_REGISTRY/docker/obico-server:api-base-latest
 
 build_app_base:
   stage: build-base
@@ -21,32 +21,31 @@ build_app_base:
   script:
     - cd backend
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - docker build -t $CI_REGISTRY/obico/obico-backend-base:latest -f Dockerfile.base .
-    - docker push $CI_REGISTRY/obico/obico-backend-base:latest
+    - docker build -t $CI_REGISTRY/docker/obico-server:backend-base-latest -f Dockerfile.base .
+    - docker push $CI_REGISTRY/docker/obico-server:backend-base-latest
 
 build_api_child:
   stage: build-children
-  needs: 
+  needs:
     - job: build_api_base
   script:
     - cd ml_api
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - docker build -t $CI_REGISTRY/obico/obico-api:latest -f Dockerfile .
-    - docker push $CI_REGISTRY/obico/obico-api:latest
+    - docker build -t $CI_REGISTRY/docker/obico-server:api-latest -f Dockerfile .
+    - docker push $CI_REGISTRY/docker/obico-server:api-latest
 
 build_backend_child:
   stage: build-children
-  needs: 
+  needs:
     - job: build_app_base
   script:
     - cd backend
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - docker build -t $CI_REGISTRY/obico/obico-backend:latest -f Dockerfile .
-    - docker push $CI_REGISTRY/obico/obico-backend:latest
-
+    - docker build -t $CI_REGISTRY/docker/obico-server:backend-latest -f Dockerfile .
+    - docker push $CI_REGISTRY/docker/obico-server:backend-latest
 build_frontend_child:
   stage: build-children
-  needs: 
+  needs:
     - job: build_app_base
   script:
     - echo hello
