switch to glregistry images

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,9 @@
 version: '2.4'
 
-x-web-defaults: &web-defaults
+x-web-defaults:
+  &web-defaults
   restart: unless-stopped
-  build:
-    context: backend
-    dockerfile: "Dockerfile${DOCKERFILE_VERSION-}"
+  image: glregistry.wizzlehq.org/docker/obico-server:backend-latest
   volumes:
     - ./backend:/app
     - ./frontend:/frontend
@@ -17,7 +16,7 @@ x-web-defaults: &web-defaults
     EMAIL_PORT: '${EMAIL_PORT-587}'
     EMAIL_USE_TLS: '${EMAIL_USE_TLS-True}'
     DEFAULT_FROM_EMAIL: '${DEFAULT_FROM_EMAIL-changeme@example.com}'
-    DEBUG: '${DEBUG-False}'    # Don't set DEBUG to True unless you know what you are doing. Otherwise the static files will be cached in browser until hard-refresh
+    DEBUG: '${DEBUG-False}' # Don't set DEBUG to True unless you know what you are doing. Otherwise the static files will be cached in browser until hard-refresh
     SITE_USES_HTTPS: 'True'
     SITE_IS_PUBLIC: 'True'
     SOCIAL_LOGIN: '${SOCIAL_LOGIN-False}'
@@ -38,17 +37,17 @@ x-web-defaults: &web-defaults
     SLACK_CLIENT_SECRET: '${SLACK_CLIENT_SECRET-}'
     VERSION:
 
+
 services:
   ml_api:
     hostname: ml_api
     restart: unless-stopped
-    build:
-      context: ml_api
+    image: glregistry.wizzlehq.org/docker/obico-server:api-latest
     environment:
-        DEBUG: 'True'
-        FLASK_APP: 'server.py'
-        #ML_API_TOKEN:
-        #HAS_GPU: 'False'
+      DEBUG: 'True'
+      FLASK_APP: 'server.py'
+      #ML_API_TOKEN:
+      #HAS_GPU: 'False'
     command: bash -c "gunicorn --bind 0.0.0.0:3333 --workers 1 wsgi"
 
   obico-web:
