--- a/backend/Dockerfile.base
+++ b/backend/Dockerfile.base
@@ -2,11 +2,9 @@ FROM python:3.7.12-alpine3.14
 
 WORKDIR /app
 EXPOSE 3334
-RUN apk -U add bash vim ffmpeg postgresql-libs git && \
-    apk add --virtual .build-deps g++ musl-dev postgresql-dev zlib-dev jpeg-dev libffi-dev
-RUN pip install --upgrade pip
-
 ADD requirements.txt .
-RUN CRYPTOGRAPHY_DONT_BUILD_RUST=1 pip install -r requirements.txt
-
-RUN apk --purge del .build-deps
+RUN apk -U add bash vim ffmpeg postgresql-libs git \
+    && apk add --virtual .build-deps g++ musl-dev postgresql-dev zlib-dev jpeg-dev libffi-dev \
+    && pip install --upgrade pip \
+    && CRYPTOGRAPHY_DONT_BUILD_RUST=1 pip install -r requirements.txt \ 
+    && apk --purge del .build-deps
