--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,8 +47,7 @@ services:
       DEBUG: 'True'
       FLASK_APP: 'server.py'
       #ML_API_TOKEN:
-      #HAS_GPU: 'False'
-    command: bash -c "gunicorn --bind 0.0.0.0:3333 --workers 1 wsgi"
+      HAS_GPU: 'False'
 
   obico-web:
     <<: *web-defaults
@@ -67,7 +66,6 @@ services:
       - "${OCTOPRINT_TUNNEL_PORT_RANGE-15853-15873}:3334"
     depends_on:
       - ml_api
-    command: sh -c 'ls -ltra && python manage.py migrate && python manage.py collectstatic -v 2 --noinput && python manage.py runserver --nostatic --noreload 0.0.0.0:3334'
 
   tasks:
     <<: *web-defaults
