--- a/ml_api/Dockerfile
+++ b/ml_api/Dockerfile
@@ -3,3 +3,4 @@ WORKDIR /app
 EXPOSE 3333
 ADD . /app
 RUN wget --quiet -O model/model.weights $(cat model/model.weights.url | tr -d '\r')
+CMD [ "gunicorn --bind 0.0.0.0:3333 --workers 1 wsgi" ]
