update to use pipenv

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,7 +4,5 @@ WORKDIR /app
 EXPOSE 3334
 
 ADD . /app
-RUN pip install -U pip \
-    && pip install -r requirements.txt
 
-CMD [ "python manage.py migrate && python manage.py collectstatic -v 2 --noinput && python manage.py runserver --nostatic --noreload 0.0.0.0:3334" ]
+CMD [ "pipenv run manage.py migrate && pipenv run manage.py collectstatic -v 2 --noinput && pipenv run manage.py runserver --nostatic --noreload 0.0.0.0:3334" ]
