--- a/backend/Dockerfile.base
+++ b/backend/Dockerfile.base
@@ -2,9 +2,9 @@ FROM python:3.7.12-alpine3.14
 
 WORKDIR /app
 EXPOSE 3334
-ADD requirements.txt .
+ADD Pipfile Pipfile.lock ./
 RUN apk -U add bash vim ffmpeg postgresql-libs git \
     && apk add --virtual .build-deps g++ musl-dev postgresql-dev zlib-dev jpeg-dev libffi-dev \
-    && pip install --upgrade pip \
-    && CRYPTOGRAPHY_DONT_BUILD_RUST=1 pip install -r requirements.txt \ 
+    && pip install --upgrade pip pipenv \
+    && CRYPTOGRAPHY_DONT_BUILD_RUST=1 pipenv sync \ 
     && apk --purge del .build-deps
