--- a/ml_api/Dockerfile.base_x86_64
+++ b/ml_api/Dockerfile.base_x86_64
@@ -1,11 +1,13 @@
 FROM nvidia/cuda:9.0-runtime-ubuntu16.04
 WORKDIR /app
 EXPOSE 3333
-ADD requirements.txt requirements_x86_64.txt ./
+ENV LC_ALL=C.UTF-8
+ENV LANG=C.UTF-8
+ADD Pipfile ./
 RUN apt-key adv --fetch-keys http://developer.download.nvidia.com/compute/cuda/repos/ubuntu1604/x86_64/3bf863cc.pub \
     && apt-get update \
     && apt-get install -y libsm6 libxrender1 libfontconfig1 vim ffmpeg python3-dev wget curl \
     && rm -rf /var/lib/apt/lists/* \
     && curl -fsSL https://bootstrap.pypa.io/pip/3.5/get-pip.py | python3.5 \
-    && pip3 install scikit-build \
-    && pip3 install -r requirements_x86_64.txt
+    && pip3 install scikit-build pipenv \
+    && pipenv install
