update to separate glregistry images

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,4 @@
-FROM glregistry.wizzlehq.org/docker/obico-server:backend-base-latest
+FROM glregistry.wizzlehq.org/docker/obico-server/backend-base:latest
 
 WORKDIR /app
 EXPOSE 3334
