--- a/backend/Dockerfile.base
+++ b/backend/Dockerfile.base
@@ -3,7 +3,7 @@ FROM python:3.7.12-alpine3.14
 WORKDIR /app
 EXPOSE 3334
 ADD Pipfile Pipfile.lock ./
-RUN apk -U add bash vim ffmpeg postgresql-libs git \
+RUN apk -U add bash vim ffmpeg postgresql-libs git cmake \
     && apk add --virtual .build-deps g++ musl-dev postgresql-dev zlib-dev jpeg-dev libffi-dev \
     && pip install --upgrade pip pipenv scikit-build \
     && pipenv install scikit-build \
