--- a/backend/Dockerfile.base
+++ b/backend/Dockerfile.base
@@ -3,8 +3,8 @@ FROM python:3.7.12-alpine3.14
 WORKDIR /app
 EXPOSE 3334
 ADD Pipfile Pipfile.lock ./
-RUN apk -U add bash vim ffmpeg postgresql-libs git \
-    && apk add --virtual .build-deps g++ musl-dev postgresql-dev zlib-dev jpeg-dev libffi-dev cmake gcc g++ \
+RUN apk update && apk -U add bash vim ffmpeg postgresql-libs git \
+    && apk add --virtual .build-deps g++ musl-dev postgresql-dev zlib-dev jpeg-dev libffi-dev cmake gcc libc-dev\
     && pip install --upgrade pip pipenv scikit-build \
     && pipenv install scikit-build \
     && CRYPTOGRAPHY_DONT_BUILD_RUST=1 pipenv sync \ 
