--- a/backend/Dockerfile.base
+++ b/backend/Dockerfile.base
@@ -3,7 +3,7 @@ FROM python:3.7.13
 WORKDIR /app
 EXPOSE 3334
 ADD Pipfile Pipfile.lock ./
-RUN apt-get update && aget-get install bash vim ffmpeg postgresql-libs git g++ musl-dev postgresql-dev zlib-dev jpeg-dev libffi-dev cmake gcc libc-dev \
+RUN apt-get update && apt-get install bash vim ffmpeg postgresql-libs git g++ musl-dev postgresql-dev zlib-dev jpeg-dev libffi-dev cmake gcc libc-dev \
     && pip install --upgrade pip pipenv scikit-build \
     && pipenv install scikit-build \
     && CRYPTOGRAPHY_DONT_BUILD_RUST=1 pipenv sync
