--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,5 +4,5 @@ WORKDIR /app
 EXPOSE 3334
 
 ADD . /app
-ENTRYPOINT [ "/bin/bash" ]
+# ENTRYPOINT [ "/bin/bash" ]
 CMD [ "pipenv run manage.py migrate && pipenv run manage.py collectstatic -v 2 --noinput && pipenv run manage.py runserver --nostatic --noreload 0.0.0.0:3334" ]
