--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,7 +70,7 @@ services:
   tasks:
     <<: *web-defaults
     hostname: tasks
-    command: sh -c "celery -A config worker --beat -l info -c 2 -Q realtime,celery"
+    command: celery -A config worker --beat -l info -c 2 -Q realtime,celery
 
   redis:
     restart: unless-stopped
