--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,4 +6,4 @@ EXPOSE 3334
 ADD . /app
 RUN chmod +x /app/run.sh
 # ENTRYPOINT [ "/bin/bash" ]
-CMD [ "/bin/bash -c /app/run.sh" ]
+CMD [ "/bin/bash", "-c /app/run.sh" ]
