--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -18,6 +18,7 @@ djangorestframework = "==3.9.1"
 django-extensions = "==2.1.4"
 redis = "==3.2.0"
 sentry-sdk = "*"
+channels = "*"
 django-simple-history = "==2.7.0"
 jsonfield = "==2.0.2"
 django-bootstrap-pagination = "==1.7.0"
