--- a/backend/Dockerfile.base
+++ b/backend/Dockerfile.base
@@ -4,6 +4,5 @@ WORKDIR /app
 EXPOSE 3334
 ADD Pipfile Pipfile.lock ./
 RUN apt-get update && apt-get install -y bash vim ffmpeg git g++ musl-dev postgresql libffi-dev cmake gcc libc-dev \
-    && pip install --upgrade pip pipenv scikit-build \
-    && pipenv install scikit-build \
-    && CRYPTOGRAPHY_DONT_BUILD_RUST=1 pipenv sync
+    && pip install --upgrade pip pipenv \
+    && pipenv sync
