--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,6 +4,5 @@ WORKDIR /app
 EXPOSE 3334
 
 ADD . /app
-COPY --chmod=777 run.sh /app/run.sh
 
-CMD [ "/bin/bash", "/app/run.sh" ]
+CMD [ "/app/run.sh" ]
