--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,22 +70,7 @@ services:
   tasks:
     <<: *web-defaults
     hostname: tasks
-    command:
-      [
-        "pipenv",
-        "run",
-        "celery",
-        "-A",
-        "config",
-        "worker",
-        "--beat",
-        "-l",
-        "info",
-        "-c",
-        "2",
-        "-Q",
-        "realtime,celery"
-      ]
+    command: [ /app/run_celery.sh" ]
 
   redis:
     restart: unless-stopped
