--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,7 +70,7 @@ services:
   tasks:
     <<: *web-defaults
     hostname: tasks
-    command: [ /app/run_celery.sh" ]
+    command: [ "/bin/bash", "/app/run_celery.sh" ]
 
   redis:
     restart: unless-stopped
