--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,6 +3,6 @@ FROM glregistry.wizzlehq.org/docker/obico-server/backend-base:latest
 WORKDIR /app
 EXPOSE 3334
 
-ADD . /app
+COPY . /app
 
 CMD /app/run.sh
