--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -17,7 +17,7 @@ django-widget-tweaks = "==1.4.3"
 djangorestframework = "==3.9.1"
 django-extensions = "==2.1.4"
 redis = "==3.2.0"
-sentry_sdk = "*"
+sentry-sdk = "*"
 channels = "*"
 django-simple-history = "==2.7.0"
 jsonfield = "==2.0.2"
