--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -17,8 +17,8 @@ django-widget-tweaks = "==1.4.3"
 djangorestframework = "==3.9.1"
 django-extensions = "==2.1.4"
 redis = "==3.2.0"
-sentry-sdk = "*"
-channels = "*"
+sentry-sdk = "==1.5.10"
+channels = "==2.4.0"
 django-simple-history = "==2.7.0"
 jsonfield = "==2.0.2"
 django-bootstrap-pagination = "==1.7.0"
