--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -4,10 +4,8 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-ipdb = "*"
 django = "==2.2.27"
 gunicorn = "==19.9.0"
-whitenoise = {version = "==5.3.0", extras = ["brotli"]}
 dj-database-url = "==0.5.0"
 opencv-python = ">=3.4"
 opencv-contrib-python = ">=4.0"
@@ -28,10 +26,31 @@ oauth2client = "==4.1.3"
 authy = "==2.2.3"
 phonenumbers = "==8.10.5"
 twilio = "==6.24.1"
-celery = {version = "==4.4.7", extras = ["redis"]}
 django-safedelete = "==0.5.1"
 pillow = "==9.0.1"
 django-hijack = "==2.1.10"
+ipdb = "*"
+asgiref = "==3.2.10"
+"zope.interface" = "==4.7.2"
+channels-redis = "==3.0.1"
+django-jstemplate = "==1.3.8"
+"pushbullet.py" = "==0.11.0"
+pytelegrambotapi = "==3.6.6"
+whitenoise = {version = "==5.3.0", extras = ["brotli"]}
+celery = {version = "==4.4.7", extras = ["redis"]}
+daphne = {ref = "tsd_stable-2.5.0", git = "https://github.com/TheSpaghettiDetective/daphne"}
+django-channels-presence = {git = "https://github.com/ivahotin/django-channels-presence.git"}
+backoff = "==1.10.0"
+django-webpack-loader = "==0.7.0"
+django-qr-code = "==1.2.0"
+discord-webhook = "==0.8.0"
+bson = "==0.5.10"
+firebase-admin = "==4.4.0"
+django-cors-headers = "==3.6.0"
+pyjwt = "==1.7.1"
+django-ipware = "==3.0.2"
+django-redis = "==5.0.0"
+nplusone = "==1.0.0"
 
 [dev-packages]
 
