--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,15 +10,16 @@ x-web-defaults:
   depends_on:
     - redis
   environment:
-    EMAIL_HOST: '${EMAIL_HOST-}'
-    EMAIL_HOST_USER: '${EMAIL_HOST_USER-}'
-    EMAIL_HOST_PASSWORD: '${EMAIL_HOST_PASSWORD-}'
-    EMAIL_PORT: '${EMAIL_PORT-587}'
-    EMAIL_USE_TLS: '${EMAIL_USE_TLS-True}'
-    DEFAULT_FROM_EMAIL: '${DEFAULT_FROM_EMAIL-changeme@example.com}'
-    DEBUG: '${DEBUG-False}' # Don't set DEBUG to True unless you know what you are doing. Otherwise the static files will be cached in browser until hard-refresh
+    EMAIL_HOST: 'smtp.sendgrid.net'
+    EMAIL_DOMAIN: 'smtp.sendgrid.net'
+    EMAIL_HOST_USER: 'apikey'
+    EMAIL_HOST_PASSWORD: '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'
+    EMAIL_PORT: '587'
+    EMAIL_USE_TLS: 'False'
+    DEFAULT_FROM_EMAIL: '${DEFAULT_FROM_EMAIL-willwalker1226@gmail.com}'
+    DEBUG: '${DEBUG-True}' # Don't set DEBUG to True unless you know what you are doing. Otherwise the static files will be cached in browser until hard-refresh
     SITE_USES_HTTPS: 'True'
-    SOCIAL_LOGIN: '${SOCIAL_LOGIN-False}'
+    SOCIAL_LOGIN: 'False'
     REDIS_URL: '${REDIS_URL-redis://redis:6379}'
     DATABASE_URL: '${DATABASE_URL-sqlite:////app/db.sqlite3}'
     INTERNAL_MEDIA_HOST: '${INTERNAL_MEDIA_HOST-http://obico-web:3334}'
@@ -26,16 +27,6 @@ x-web-defaults:
     ACCOUNT_ALLOW_SIGN_UP: '${ACCOUNT_ALLOW_SIGN_UP-False}'
     WEBPACK_LOADER_ENABLED: '${WEBPACK_LOADER_ENABLED-False}'
     OCTOPRINT_TUNNEL_PORT_RANGE: '${OCTOPRINT_TUNNEL_PORT_RANGE-15853-15873}'
-    TELEGRAM_BOT_TOKEN: '${TELEGRAM_BOT_TOKEN-}'
-    TWILIO_ACCOUNT_SID: '${TWILIO_ACCOUNT_SID-}'
-    TWILIO_AUTH_TOKEN: '${TWILIO_AUTH_TOKEN-}'
-    TWILIO_FROM_NUMBER: '${TWILIO_FROM_NUMBER-}'
-    SENTRY_DSN: '${SENTRY_DSN-}'
-    PUSHOVER_APP_TOKEN: '${PUSHOVER_APP_TOKEN-}'
-    SLACK_CLIENT_ID: '${SLACK_CLIENT_ID-}'
-    SLACK_CLIENT_SECRET: '${SLACK_CLIENT_SECRET-}'
-    VERSION:
-
 
 services:
   ml_api:
