--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,6 +40,7 @@ build_backend_child:
     - job: build_app_base
   script:
     - cd backend
+    - cp ../frontend frontend
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
     - docker buildx build -t $CI_REGISTRY/docker/obico-server/backend:latest -f Dockerfile .
     - docker push $CI_REGISTRY/docker/obico-server/backend:latest
