--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,35 +7,36 @@ stages:
   - build-base
   - build-children
 
-backend-dokter:
+.dokter_base:
+  tags:
+    - kube
   image: registry.gitlab.com/gitlab-org/incubation-engineering/ai-assist/dokter/dokter:latest
   stage: lint
-  script:
-    - dokter -d backend/Dockerfile --gitlab-codequality
   artifacts:
     name: "$CI_JOB_NAME artifacts from $CI_PROJECT_NAME on $CI_COMMIT_REF_SLUG"
     expire_in: 1 day
     when: always
-    reports:
-      codequality:
-        - "dokter-backend-$CI_COMMIT_SHA.json"
     paths:
       - "dokter-$CI_COMMIT_SHA.json"
 
+
+backend-dokter:
+  extends: .dokter_base
+  script:
+    - dokter -d backend/Dockerfile --gitlab-codequality
+  artifacts:
+    reports:
+      codequality:
+        - "dokter-backend-$CI_COMMIT_SHA.json"
+
 ml_api-dokter:
-  image: registry.gitlab.com/gitlab-org/incubation-engineering/ai-assist/dokter/dokter:latest
-  stage: lint
+  extends: .dokter_base
   script:
     - dokter -d ml_api/Dockerfile --gitlab-codequality
   artifacts:
-    name: "$CI_JOB_NAME artifacts from $CI_PROJECT_NAME on $CI_COMMIT_REF_SLUG"
-    expire_in: 1 day
-    when: always
     reports:
       codequality:
         - "dokter-ml_api-$CI_COMMIT_SHA.json"
-    paths:
-      - "dokter-$CI_COMMIT_SHA.json"
 
 
 build_api_base:
