--- a/ml_api/Dockerfile
+++ b/ml_api/Dockerfile
@@ -1,7 +1,7 @@
 FROM glregistry.wizzlehq.org/docker/obico-server/api-base:latest
 WORKDIR /app
 EXPOSE 3333
-ADD . /app
-RUN wget --quiet -O model/model.weights $(cat model/model.weights.url | tr -d '\r')
+COPY . /app
+RUN wget --quiet -O model/model.weights "$(cat model/model.weights.url | tr -d '\r')""
 
 CMD [ "pipenv", "run", "gunicorn", "--bind", "0.0.0.0:3333", "--workers", "1", "wsgi" ]
