--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,8 +28,9 @@ backend-dokter:
 ml_api-dokter:
   extends: .dokter_base
   script:
-    - dokter -d ml_api/Dockerfile -s
-    - dokter -d ml_api/Dockerfile.base_x86_64 -s
+    - cd ml_api
+    - dokter -d Dockerfile -s
+    - dokter -d Dockerfile.base_x86_64 -s
 
 
 build_api_base:
