remove useless cat

--- a/ml_api/Dockerfile
+++ b/ml_api/Dockerfile
@@ -2,5 +2,5 @@ FROM glregistry.wizzlehq.org/docker/obico-server/api-base:latest
 WORKDIR /app
 EXPOSE 3333
 COPY . /app
-RUN wget --quiet -O model/model.weights "$(cat model/model.weights.url | tr -d '\r')"
+RUN wget --quiet -O model/model.weights "$(tr -d '\r' <<< model/model.weights.url)"
 CMD [ "pipenv", "run", "gunicorn", "--bind", "0.0.0.0:3333", "--workers", "1", "wsgi" ]
