--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ x-web-defaults:
     DEBUG: '${DEBUG-False}' # Don't set DEBUG to True unless you know what you are doing. Otherwise the static files will be cached in browser until hard-refresh
     SITE_USES_HTTPS: 'True'
     SOCIAL_LOGIN: 'False'
-    REDIS_URL: '${REDIS_URL-redis://redis:6379}'
+    REDIS_URL: 'redis://obico-server-redis-1:6379'
     DATABASE_URL: '${DATABASE_URL-sqlite:////app/db.sqlite3}'
     INTERNAL_MEDIA_HOST: '${INTERNAL_MEDIA_HOST-http://obico-web:3334}'
     ML_API_HOST: '${ML_API_HOST-http://ml_api:3333}'
