--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,13 +18,14 @@ x-web-defaults:
     DEFAULT_FROM_EMAIL: '${DEFAULT_FROM_EMAIL-willwalker1226@gmail.com}'
     DEBUG: 'False' # Don't set DEBUG to True unless you know what you are doing. Otherwise the static files will be cached in browser until hard-refresh
     SITE_USES_HTTPS: 'True'
-    SOCIAL_LOGIN: 'False'
-    REDIS_URL: 'redis://obico-server-redis-1:6379'
-    DATABASE_URL: '${DATABASE_URL-sqlite:////app/db.sqlite3}'
+    SITE_IS_PUBLIC: "True"
+    SOCIAL_LOGIN: 'True'
+    REDIS_URL: 'redis://redis:6379'
+    DATABASE_URL: 'sqlite:////app/db.sqlite3'
     INTERNAL_MEDIA_HOST: '${INTERNAL_MEDIA_HOST-http://obico-web:3334}'
     ML_API_HOST: '${ML_API_HOST-http://ml_api:3333}'
     ACCOUNT_ALLOW_SIGN_UP: '${ACCOUNT_ALLOW_SIGN_UP-True}'
-    WEBPACK_LOADER_ENABLED: '${WEBPACK_LOADER_ENABLED-False}'
+    WEBPACK_LOADER_ENABLED: '${WEBPACK_LOADER_ENABLED-True}'
     OCTOPRINT_TUNNEL_PORT_RANGE: '${OCTOPRINT_TUNNEL_PORT_RANGE-15853-15873}'
 
 services:
@@ -67,6 +68,7 @@ services:
     command: /app/run_celery.sh
 
   redis:
+    hostname: redis
     restart: unless-stopped
     image: redis:5.0-alpine
 
