--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,13 +19,13 @@ x-web-defaults:
     DEBUG: 'False' # Don't set DEBUG to True unless you know what you are doing. Otherwise the static files will be cached in browser until hard-refresh
     SITE_USES_HTTPS: 'True'
     SITE_IS_PUBLIC: "True"
-    SOCIAL_LOGIN: 'True'
+    SOCIAL_LOGIN: 'False'
     REDIS_URL: 'redis://redis:6379'
     DATABASE_URL: 'sqlite:////app/db.sqlite3'
     INTERNAL_MEDIA_HOST: '${INTERNAL_MEDIA_HOST-http://obico-web:3334}'
     ML_API_HOST: '${ML_API_HOST-http://ml_api:3333}'
     ACCOUNT_ALLOW_SIGN_UP: '${ACCOUNT_ALLOW_SIGN_UP-True}'
-    WEBPACK_LOADER_ENABLED: '${WEBPACK_LOADER_ENABLED-True}'
+    WEBPACK_LOADER_ENABLED: '${WEBPACK_LOADER_ENABLED-False}'
     OCTOPRINT_TUNNEL_PORT_RANGE: '${OCTOPRINT_TUNNEL_PORT_RANGE-15853-15873}'
 
 services:
