--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,17 +15,17 @@ x-web-defaults:
     EMAIL_HOST_USER: 'apikey'
     EMAIL_PORT: '587'
     EMAIL_USE_TLS: 'False'
-    DEFAULT_FROM_EMAIL: '${DEFAULT_FROM_EMAIL-willwalker1226@gmail.com}'
+    DEFAULT_FROM_EMAIL: 'willwalker1226@gmail.com'
     DEBUG: 'False' # Don't set DEBUG to True unless you know what you are doing. Otherwise the static files will be cached in browser until hard-refresh
     SITE_USES_HTTPS: 'True'
     SITE_IS_PUBLIC: "True"
     SOCIAL_LOGIN: 'False'
     REDIS_URL: 'redis://redis:6379'
     DATABASE_URL: 'sqlite:////app/db.sqlite3'
-    INTERNAL_MEDIA_HOST: '${INTERNAL_MEDIA_HOST-http://obico-web:3334}'
-    ML_API_HOST: '${ML_API_HOST-http://ml_api:3333}'
-    ACCOUNT_ALLOW_SIGN_UP: '${ACCOUNT_ALLOW_SIGN_UP-True}'
-    WEBPACK_LOADER_ENABLED: '${WEBPACK_LOADER_ENABLED-False}'
+    INTERNAL_MEDIA_HOST: 'http://obico-web:3334'
+    ML_API_HOST: 'http://ml_api:3333'
+    ACCOUNT_ALLOW_SIGN_UP: 'True'
+    WEBPACK_LOADER_ENABLED: 'False'
     OCTOPRINT_TUNNEL_PORT_RANGE: '${OCTOPRINT_TUNNEL_PORT_RANGE-15853-15873}'
 
 services:
@@ -34,7 +34,7 @@ services:
     restart: unless-stopped
     image: glregistry.wizzlehq.org/docker/obico-server/api:latest
     environment:
-      DEBUG: 'True'
+      DEBUG: 'False'
       FLASK_APP: 'server.py'
       #ML_API_TOKEN:
       HAS_GPU: 'False'
