--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -38,6 +38,7 @@ django-jstemplate = "==1.3.8"
 pytelegrambotapi = "==3.6.6"
 whitenoise = {version = "==5.3.0", extras = ["brotli"]}
 celery = {version = "==4.4.7", extras = ["redis"]}
+Twisted = {version = "*", extras = ["tls","http2"]}
 daphne = {ref = "tsd_stable-2.5.0", git = "https://github.com/TheSpaghettiDetective/daphne"}
 django-channels-presence = {git = "https://github.com/ivahotin/django-channels-presence.git"}
 backoff = "==1.10.0"
