--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,13 @@ stages:
   - build-base
   - build-children
 
+workflow:
+  rules:
+    - if: "$CI_PIPELINE_SOURCE == 'push'"
+      changes:
+        - "**/*Dockerfile"
+
+
 .dokter_base:
   tags:
     - kube
