--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,8 @@ services:
     hostname: ml_api
     restart: unless-stopped
     image: glregistry.wizzlehq.org/docker/obico-server/api:latest
+    networks:
+      - proxynet
     environment:
       DEBUG: 'False'
       FLASK_APP: 'server.py'
@@ -64,11 +66,15 @@ services:
 
   tasks:
     <<: *web-defaults
+    networks:
+      - proxynet
     hostname: tasks
     command: /app/run_celery.sh
 
   redis:
     hostname: redis
+    networks:
+      - proxynet
     restart: unless-stopped
     image: redis:5.0-alpine
 
