only run on main branch

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ stages:
 
 workflow:
   rules:
-    - if: "$CI_PIPELINE_SOURCE == 'push'"
+    - if: "$CI_PIPELINE_SOURCE == 'push' && $CI_COMMIT_BRANCH == 'main'"
       changes:
         - "**/*Dockerfile"
 
