--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -20,7 +20,7 @@ channels = "==2.4.0"
 django-simple-history = "==2.7.0"
 jsonfield = "==2.0.2"
 django-bootstrap-pagination = "==1.7.0"
-newrelic = "==4.12.0.113"
+newrelic = "==8.0.0.179"
 django-settings-export = "==1.2.1"
 oauth2client = "==4.1.3"
 authy = "==2.2.3"
@@ -36,10 +36,7 @@ channels-redis = "==3.0.1"
 django-jstemplate = "==1.3.8"
 "pushbullet.py" = "==0.11.0"
 pytelegrambotapi = "==3.6.6"
-whitenoise = {version = "==5.3.0", extras = ["brotli"]}
-celery = {version = "==4.4.7", extras = ["redis"]}
 Twisted = {version = "*", extras = ["tls","http2"]}
-daphne = {ref = "tsd_stable-2.5.0", git = "https://github.com/TheSpaghettiDetective/daphne"}
 django-channels-presence = {git = "https://github.com/ivahotin/django-channels-presence.git"}
 backoff = "==1.10.0"
 django-webpack-loader = "==0.7.0"
@@ -52,6 +49,9 @@ pyjwt = "==1.7.1"
 django-ipware = "==3.0.2"
 django-redis = "==5.0.0"
 nplusone = "==1.0.0"
+whitenoise = {version = "==5.3.0", extras = ["brotli"]}
+celery = {version = "==4.4.7", extras = ["redis"]}
+daphne = {editable = true, ref = "tsd_stable-2.5.0", git = "https://github.com/TheSpaghettiDetective/daphne"}
 
 [dev-packages]
 
