--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -37,7 +37,6 @@ django-jstemplate = "==1.3.8"
 "pushbullet.py" = "==0.11.0"
 pytelegrambotapi = "==3.6.6"
 Twisted = {version = "*", extras = ["tls","http2"]}
-django-channels-presence = {git = "https://github.com/ivahotin/django-channels-presence.git"}
 backoff = "==1.10.0"
 django-webpack-loader = "==0.7.0"
 django-qr-code = "==1.2.0"
@@ -51,7 +50,9 @@ django-redis = "==5.0.0"
 nplusone = "==1.0.0"
 whitenoise = {version = "==5.3.0", extras = ["brotli"]}
 celery = {version = "==4.4.7", extras = ["redis"]}
-daphne = {editable = true, ref = "tsd_stable-2.5.0", git = "https://github.com/TheSpaghettiDetective/daphne"}
+daphne = {ref = "tsd_stable-2.5.0", git = "https://github.com/TheSpaghettiDetective/daphne"}
+django-channels-presence = {git = "https://github.com/ivahotin/django-channels-presence.git"}
+colorlog = "==6.7.0"
 
 [dev-packages]
 
