--- a/ml_api/Dockerfile
+++ b/ml_api/Dockerfile
@@ -1,8 +1,7 @@
 FROM thespaghettidetective/ml_api:base-1.1
 WORKDIR /app
 EXPOSE 3333
-
-ADD . /app
-RUN pip install --upgrade pip
-RUN pip install -r requirements.txt
-RUN wget --quiet -O model/model.weights $(cat model/model.weights.url | tr -d '\r')
+COPY . /app
+RUN pip install --upgrade pip && \
+	pip install -r requirements.txt && \
+	wget --quiet -O model/model.weights $(cat model/model.weights.url | tr -d '\r')
