--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 django = "==2.2.27"
 gunicorn = "==19.9.0"
 dj-database-url = "==0.5.0"
+importlib-metadata = "==4.13.0"
 opencv-python = ">=3.4"
 opencv-contrib-python = ">=4.0"
 psycopg2-binary = "==2.8.6"
