--- a/ml_api/Dockerfile
+++ b/ml_api/Dockerfile
@@ -4,4 +4,4 @@ EXPOSE 3333
 COPY . /app
 RUN pip install --upgrade pip && \
 	pip install -r requirements.txt && \
-	wget --quiet -O model/model.weights $(cat model/model.weights.url | tr -d '\r')
+	wget --quiet -O model/model.weights "$(cat model/model.weights.url | tr -d '\r')"
