--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -54,6 +54,7 @@ celery = {version = "==4.4.7", extras = ["redis"]}
 daphne = {ref = "tsd_stable-2.5.0", git = "https://github.com/TheSpaghettiDetective/daphne"}
 django-channels-presence = {git = "https://github.com/ivahotin/django-channels-presence.git"}
 colorlog = "==6.7.0"
+packaging = "*"
 
 [dev-packages]
 
