insatll system level

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,7 +5,7 @@ EXPOSE 3334
 RUN useradd -ms /bin/bash obico
 COPY --chown=obico:obico backend .
 COPY --chown=obico:obico frontend /frontend
-RUN apt-get update && apt-get install -y bash vim ffmpeg git g++ musl-dev postgresql libffi-dev cmake gcc libc-dev \
+RUN apt-get update && apt-get install -y bash vim ffmpeg git g++ musl-dev postgresql libffi-dev cmake gcc libc-dev python3-packaging\
     && chmod -R 777 /app /frontend
 USER obico
 ENV PATH="${PATH}:/home/obico/.local/bin"
