--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,3 @@
 {
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  // "enabled": false
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json"
 }
