--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,8 @@ workflow:
         - "**/*Dockerfile"
         - "backend/Pipfile"
         - "backend/Pipfile.lock"
+        - "ml_api/Pipfile"
+        - "ml_api/Pipfile.lock"
 
 
 .dokter_base:
