--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,6 +21,7 @@ workflow:
 .dokter_base:
   tags:
     - kube
+  allow_failure: true
   image: registry.gitlab.com/gitlab-org/incubation-engineering/ai-assist/dokter/dokter:latest
   stage: lint
   artifacts:
