--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = ">=2.2.28"
+django = "==2.2.20"
 gunicorn = "==20.1.0"
 dj-database-url = "==0.5.0"
 importlib-metadata = "==4.13.0"
@@ -24,14 +24,14 @@ django-bootstrap-pagination = "==1.7.1"
 newrelic = "==8.0.0.179"
 django-settings-export = "==1.2.1"
 oauth2client = "==4.1.3"
-authy = "==2.2.6"
-phonenumbers = "==8.13.3"
-twilio = "==6.63.2"
-django-safedelete = "==0.5.7"
-pillow = "==9.4.0"
-django-hijack = "==2.3.0"
+authy = "==2.2.3"
+phonenumbers = "==8.10.5"
+twilio = "==6.24.1"
+django-safedelete = "==0.5.1"
+pillow = "==9.3.0"
+django-hijack = "==2.1.10"
 ipdb = "*"
-asgiref = "==3.6.0"
+asgiref = "==3.2.10"
 "zope.interface" = "==4.7.2"
 channels-redis = "==3.4.1"
 django-jstemplate = "==1.3.8"
@@ -49,12 +49,12 @@ pyjwt = "==2.6.0"
 django-ipware = "==3.0.7"
 django-redis = "==5.2.0"
 nplusone = "==1.0.0"
+colorlog = "==6.7.0"
+packaging = "==23.0"
 whitenoise = {version = "==5.3.0", extras = ["brotli"]}
-celery = {version = "==5.2.7", extras = ["redis"]}
+celery = {version = "==4.4.7", extras = ["redis"]}
 daphne = {ref = "tsd_stable-2.5.0", git = "https://github.com/TheSpaghettiDetective/daphne"}
 django-channels-presence = {git = "https://github.com/ivahotin/django-channels-presence.git"}
-colorlog = "==6.7.0"
-packaging = "*"
 
 [dev-packages]
 
