--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -55,6 +55,7 @@ whitenoise = {version = "==5.3.0", extras = ["brotli"]}
 celery = {version = "==4.4.7", extras = ["redis"]}
 daphne = {ref = "tsd_stable-2.5.0", git = "https://github.com/TheSpaghettiDetective/daphne"}
 django-channels-presence = {git = "https://github.com/ivahotin/django-channels-presence.git"}
+components = "*"
 
 [dev-packages]
 
