--- a/ml_api/Dockerfile
+++ b/ml_api/Dockerfile
@@ -2,7 +2,7 @@ FROM glregistry.wizzlehq.org/docker/obico-server/api-base:latest
 WORKDIR /app
 EXPOSE 3333
 COPY . /app
-RUN pip install --upgrade pip room \
+RUN pip install --upgrade pip \
 	&& pip install -r requirements.txt \
 	&& wget --quiet -O model/model-weights.darknet $(cat model/model-weights.darknet.url | tr -d '\r') \
 	&& wget --quiet -O model/model-weights.onnx $(cat model/model-weights.onnx.url | tr -d '\r')
